# Lem_in

./: CMakeLists.txt  a.out  mainc.c  map  test
includes/: lemin.h
srcs/: check_links.c  check_max.c  check_rooms.c  create_end.c  create_start.c  dlc.c  ft_lemin.c  move_ants.c  pars_map.c  put_ants.c  read_map.c  read_map_double.c  search_path.c  work_with_struct.c
